--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
 * {
     text-align: center;
+    background-color: beige;
 }
 
 #Introduction {
-    background-color: yellow;
     color: blue;
     font-size: large;
-
-} 
+}
