--- a/dishes/Roasted-Tomato,Fresh-Mozzarella-and-Basil-Sheet-Pan-Pizza/style.css
+++ b/dishes/Roasted-Tomato,Fresh-Mozzarella-and-Basil-Sheet-Pan-Pizza/style.css
@@ -1,3 +1,27 @@
 * {
     background-color: bisque;
 }
+
+.flex-container,
+.content {
+    display: flex;
+}
+
+.flex-container {
+    justify-content: space-around;
+    gap:10px;
+    flex-wrap: wrap;
+}
+
+
+.description {
+    width:500px;
+    flex-grow: 0 0 500px;
+    min-width: 500px;
+}
+.content{
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 400px;
+ }
