--- a/index.css
+++ b/index.css
@@ -1,9 +1,172 @@
-* {
-    text-align: center;
-    background-color: beige;
+body {
+    margin:0;
 }
 
-#Introduction {
-    color: blue;
-    font-size: large;
+.header{
+    background-color: #1F2937;
+    color:#f0faf8;  
+    padding: 0px 200px 50px 200px;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+a{
+    text-decoration: none;
+}
+#logo{
+    font-size: 24px;
+    color:#f9faf8;
+    font-weight: bolder;
+}
+ul{
+    list-style-type: none;
+    display: flex;
+    gap:20px;
+    margin:20px;
+    
+}
+li a{
+    font-size: 18px;
+    color:#e5e7eb;
+}
+
+
+
+.main{
+    display: flex;
+    justify-content: space-between;
+    padding:100px 0px;
+}
+.content{
+    text-align: left;
+    max-width: 420px;
+    color:#e5e7eb;
+    font-size: 18px;
+    
+}
+.content h1{
+    font-size: 48px;
+    font-weight: bolder;
+    color:#f9faf8;
+    margin:0;
+    margin-bottom: 30px;
+}
+.image {
+    text-align: center;
+    max-width: 500px;
+    flex: 0 0 0;
+}
+.image img{
+    width: 500px;
+    height: auto;
+}
+.image p {
+    margin: 0;
+}
+button{
+    color:#f9faf8;
+    background-color:#3882f6;
+    font-size: 18px;
+    border:0px;
+    padding: 5px 30px;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+}
+button:hover{
+    background-color: #f9faf8;
+    color:black;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 50px;
+}
+#information-header {
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1F2937;
+    min-width: 400px;
+    text-align: center;
+}
+.subtext {
+    justify-content: center;
+    display: flex;
+    margin:50px 200px;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+.box{
+    flex:0 1 0;
+    
+}
+.box img {
+    border:3px solid #3882f6;
+    border-radius: 8px;
+    max-width: 250px;
+    
+}
+.box p{
+    color:#1F2937;
+    font-size: 18px;
+    text-align: center;
+}
+
+
+.quote{
+    display:flex;
+    flex-direction: column;
+    padding: 40px 100px;
+    background-color: #e5e7eb;
+}
+.quote p{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    margin:5px 0px;
+}
+#author {
+    text-align: right;
+}
+
+
+.signup {
+    display: flex;
+    background-color: #3882f6;
+    color:#f0faf8;
+    margin: 100px;
+    border-radius: 8px;
+    padding:30px 130px;
+    justify-content: space-between;
+    align-items: center;
+}
+.signup-content {
+    flex: 1 1 auto;
+}
+#signup-title {
+    margin:5px 0;
+    font-size: 24px;
+}
+.signup-content p{
+    margin: 5px 0;
+    font-size: 18px;
+}
+.signup button{
+    border: 2px solid #f0faf8;
+}
+
+.footer{
+    display: flex;
+    background-color: #1F2937;
+    color:#e5e7eb;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px;
 }
